Third_Year/Compilers/xpl/xpl_parser.output
   0  $accept : file $end

   1  file : decls
   2       |

   3  decls : decl
   4        | decls decl

   5  decl : functions
   6       | vardecl

   7  vardecls : vardecl
   8           | vardecls vardecl

   9  vardecl : type tIDENTIFIER ';'
  10          | tPUBLIC type tIDENTIFIER ';'
  11          | tUSE type tIDENTIFIER ';'
  12          | type tIDENTIFIER '=' expr ';'
  13          | tPUBLIC type tIDENTIFIER '=' expr ';'

  14  functions : tPUBLIC type tIDENTIFIER '(' fundeclargs ')'
  15            | type tIDENTIFIER '(' fundeclargs ')'
  16            | tUSE type tIDENTIFIER '(' fundeclargs ')'
  17            | tPUBLIC tPROCEDURE tIDENTIFIER '(' fundeclargs ')'
  18            | tPROCEDURE tIDENTIFIER '(' fundeclargs ')'
  19            | tPUBLIC type tIDENTIFIER '(' fundeclargs ')' '=' literal block
  20            | tPUBLIC type tIDENTIFIER '(' fundeclargs ')' block
  21            | type tIDENTIFIER '(' fundeclargs ')' '=' literal block
  22            | type tIDENTIFIER '(' fundeclargs ')' block
  23            | tPUBLIC tPROCEDURE tIDENTIFIER '(' fundeclargs ')' block
  24            | tPROCEDURE tIDENTIFIER '(' fundeclargs ')' block

  25  fundeclargs : args
  26              |

  27  args : arg
  28       | args ',' arg

  29  arg : type tIDENTIFIER

  30  type : tTYPEINT
  31       | tTYPESTRING
  32       | tTYPEDOUBLE
  33       | '[' type ']'

  34  literal : tINTEGER
  35          | tDOUBLE
  36          | literalString
  37          | tNULL

  38  literalString : tSTRING
  39                | literalString tSTRING

  40  block : '{' vardecls list '}'
  41        | '{' vardecls '}'
  42        | '{' list '}'
  43        | '{' '}'

  44  list : stmt
  45       | list stmt

  46  stmt : expr ';'
  47       | expr '!'
  48       | expr tPRINTLN
  49       | tWHILE '(' expr ')' stmt
  50       | sweeploop
  51       | tNEXT
  52       | tSTOP
  53       | tRETURN
  54       | tIF '(' expr ')' stmt
  55       | tIF '(' expr ')' stmt elseconds
  56       | block

  57  sweeploop : tSWEEP '+' '(' leftval ':' expr ':' expr ')' stmt
  58            | tSWEEP '-' '(' leftval ':' expr ':' expr ')' stmt
  59            | tSWEEP '+' '(' leftval ':' expr ':' expr ':' expr ')' stmt
  60            | tSWEEP '-' '(' leftval ':' expr ':' expr ':' expr ')' stmt

  61  elseconds : tELSE stmt
  62            | tELIF '(' expr ')' stmt
  63            | tELIF '(' expr ')' stmt elseconds

  64  expr : literal
  65       | '-' expr
  66       | '+' expr
  67       | '~' expr
  68       | expr '+' expr
  69       | expr '-' expr
  70       | expr '*' expr
  71       | expr '/' expr
  72       | expr '%' expr
  73       | expr '<' expr
  74       | expr '>' expr
  75       | expr tGE expr
  76       | expr tLE expr
  77       | expr tNE expr
  78       | expr tEQ expr
  79       | expr '&' expr
  80       | expr '|' expr
  81       | '(' expr ')'
  82       | '[' expr ']'
  83       | leftval
  84       | leftval '=' expr
  85       | leftval '?'
  86       | funcall
  87       | '@'

  88  funcall : tIDENTIFIER '(' ')'
  89          | tIDENTIFIER '(' funcallargs ')'

  90  funcallargs : funcallarg
  91              | funcallargs ',' funcallarg

  92  funcallarg : expr

  93  leftval : tIDENTIFIER
  94          | expr '[' expr ']'

state 0
	$accept : . file $end  (0)
	file : .  (2)

	tPUBLIC  shift 1
	tPROCEDURE  shift 2
	tUSE  shift 3
	tTYPEINT  shift 4
	tTYPESTRING  shift 5
	tTYPEDOUBLE  shift 6
	'['  shift 7
	$end  reduce 2

	file  goto 8
	type  goto 9
	decls  goto 10
	decl  goto 11
	vardecl  goto 12
	functions  goto 13


state 1
	vardecl : tPUBLIC . type tIDENTIFIER ';'  (10)
	vardecl : tPUBLIC . type tIDENTIFIER '=' expr ';'  (13)
	functions : tPUBLIC . type tIDENTIFIER '(' fundeclargs ')'  (14)
	functions : tPUBLIC . tPROCEDURE tIDENTIFIER '(' fundeclargs ')'  (17)
	functions : tPUBLIC . type tIDENTIFIER '(' fundeclargs ')' '=' literal block  (19)
	functions : tPUBLIC . type tIDENTIFIER '(' fundeclargs ')' block  (20)
	functions : tPUBLIC . tPROCEDURE tIDENTIFIER '(' fundeclargs ')' block  (23)

	tPROCEDURE  shift 14
	tTYPEINT  shift 4
	tTYPESTRING  shift 5
	tTYPEDOUBLE  shift 6
	'['  shift 7
	.  error

	type  goto 15


state 2
	functions : tPROCEDURE . tIDENTIFIER '(' fundeclargs ')'  (18)
	functions : tPROCEDURE . tIDENTIFIER '(' fundeclargs ')' block  (24)

	tIDENTIFIER  shift 16
	.  error


state 3
	vardecl : tUSE . type tIDENTIFIER ';'  (11)
	functions : tUSE . type tIDENTIFIER '(' fundeclargs ')'  (16)

	tTYPEINT  shift 4
	tTYPESTRING  shift 5
	tTYPEDOUBLE  shift 6
	'['  shift 7
	.  error

	type  goto 17


state 4
	type : tTYPEINT .  (30)

	.  reduce 30


state 5
	type : tTYPESTRING .  (31)

	.  reduce 31


state 6
	type : tTYPEDOUBLE .  (32)

	.  reduce 32


state 7
	type : '[' . type ']'  (33)

	tTYPEINT  shift 4
	tTYPESTRING  shift 5
	tTYPEDOUBLE  shift 6
	'['  shift 7
	.  error

	type  goto 18


state 8
	$accept : file . $end  (0)

	$end  accept


state 9
	vardecl : type . tIDENTIFIER ';'  (9)
	vardecl : type . tIDENTIFIER '=' expr ';'  (12)
	functions : type . tIDENTIFIER '(' fundeclargs ')'  (15)
	functions : type . tIDENTIFIER '(' fundeclargs ')' '=' literal block  (21)
	functions : type . tIDENTIFIER '(' fundeclargs ')' block  (22)

	tIDENTIFIER  shift 19
	.  error


state 10
	file : decls .  (1)
	decls : decls . decl  (4)

	tPUBLIC  shift 1
	tPROCEDURE  shift 2
	tUSE  shift 3
	tTYPEINT  shift 4
	tTYPESTRING  shift 5
	tTYPEDOUBLE  shift 6
	'['  shift 7
	$end  reduce 1

	type  goto 9
	decl  goto 20
	vardecl  goto 12
	functions  goto 13


state 11
	decls : decl .  (3)

	.  reduce 3


state 12
	decl : vardecl .  (6)

	.  reduce 6


state 13
	decl : functions .  (5)

	.  reduce 5


state 14
	functions : tPUBLIC tPROCEDURE . tIDENTIFIER '(' fundeclargs ')'  (17)
	functions : tPUBLIC tPROCEDURE . tIDENTIFIER '(' fundeclargs ')' block  (23)

	tIDENTIFIER  shift 21
	.  error


state 15
	vardecl : tPUBLIC type . tIDENTIFIER ';'  (10)
	vardecl : tPUBLIC type . tIDENTIFIER '=' expr ';'  (13)
	functions : tPUBLIC type . tIDENTIFIER '(' fundeclargs ')'  (14)
	functions : tPUBLIC type . tIDENTIFIER '(' fundeclargs ')' '=' literal block  (19)
	functions : tPUBLIC type . tIDENTIFIER '(' fundeclargs ')' block  (20)

	tIDENTIFIER  shift 22
	.  error


state 16
	functions : tPROCEDURE tIDENTIFIER . '(' fundeclargs ')'  (18)
	functions : tPROCEDURE tIDENTIFIER . '(' fundeclargs ')' block  (24)

	'('  shift 23
	.  error


state 17
	vardecl : tUSE type . tIDENTIFIER ';'  (11)
	functions : tUSE type . tIDENTIFIER '(' fundeclargs ')'  (16)

	tIDENTIFIER  shift 24
	.  error


state 18
	type : '[' type . ']'  (33)

	']'  shift 25
	.  error


state 19
	vardecl : type tIDENTIFIER . ';'  (9)
	vardecl : type tIDENTIFIER . '=' expr ';'  (12)
	functions : type tIDENTIFIER . '(' fundeclargs ')'  (15)
	functions : type tIDENTIFIER . '(' fundeclargs ')' '=' literal block  (21)
	functions : type tIDENTIFIER . '(' fundeclargs ')' block  (22)

	'='  shift 26
	';'  shift 27
	'('  shift 28
	.  error


state 20
	decls : decls decl .  (4)

	.  reduce 4


state 21
	functions : tPUBLIC tPROCEDURE tIDENTIFIER . '(' fundeclargs ')'  (17)
	functions : tPUBLIC tPROCEDURE tIDENTIFIER . '(' fundeclargs ')' block  (23)

	'('  shift 29
	.  error


state 22
	vardecl : tPUBLIC type tIDENTIFIER . ';'  (10)
	vardecl : tPUBLIC type tIDENTIFIER . '=' expr ';'  (13)
	functions : tPUBLIC type tIDENTIFIER . '(' fundeclargs ')'  (14)
	functions : tPUBLIC type tIDENTIFIER . '(' fundeclargs ')' '=' literal block  (19)
	functions : tPUBLIC type tIDENTIFIER . '(' fundeclargs ')' block  (20)

	'='  shift 30
	';'  shift 31
	'('  shift 32
	.  error


state 23
	functions : tPROCEDURE tIDENTIFIER '(' . fundeclargs ')'  (18)
	functions : tPROCEDURE tIDENTIFIER '(' . fundeclargs ')' block  (24)
	fundeclargs : .  (26)

	tTYPEINT  shift 4
	tTYPESTRING  shift 5
	tTYPEDOUBLE  shift 6
	'['  shift 7
	')'  reduce 26

	type  goto 33
	fundeclargs  goto 34
	args  goto 35
	arg  goto 36


state 24
	vardecl : tUSE type tIDENTIFIER . ';'  (11)
	functions : tUSE type tIDENTIFIER . '(' fundeclargs ')'  (16)

	';'  shift 37
	'('  shift 38
	.  error


state 25
	type : '[' type ']' .  (33)

	.  reduce 33


state 26
	vardecl : type tIDENTIFIER '=' . expr ';'  (12)

	tINTEGER  shift 39
	tDOUBLE  shift 40
	tIDENTIFIER  shift 41
	tSTRING  shift 42
	tNULL  shift 43
	'~'  shift 44
	'+'  shift 45
	'-'  shift 46
	'['  shift 47
	'('  shift 48
	'@'  shift 49
	.  error

	literalString  goto 50
	expr  goto 51
	funcall  goto 52
	leftval  goto 53
	literal  goto 54


state 27
	vardecl : type tIDENTIFIER ';' .  (9)

	.  reduce 9


state 28
	functions : type tIDENTIFIER '(' . fundeclargs ')'  (15)
	functions : type tIDENTIFIER '(' . fundeclargs ')' '=' literal block  (21)
	functions : type tIDENTIFIER '(' . fundeclargs ')' block  (22)
	fundeclargs : .  (26)

	tTYPEINT  shift 4
	tTYPESTRING  shift 5
	tTYPEDOUBLE  shift 6
	'['  shift 7
	')'  reduce 26

	type  goto 33
	fundeclargs  goto 55
	args  goto 35
	arg  goto 36


state 29
	functions : tPUBLIC tPROCEDURE tIDENTIFIER '(' . fundeclargs ')'  (17)
	functions : tPUBLIC tPROCEDURE tIDENTIFIER '(' . fundeclargs ')' block  (23)
	fundeclargs : .  (26)

	tTYPEINT  shift 4
	tTYPESTRING  shift 5
	tTYPEDOUBLE  shift 6
	'['  shift 7
	')'  reduce 26

	type  goto 33
	fundeclargs  goto 56
	args  goto 35
	arg  goto 36


state 30
	vardecl : tPUBLIC type tIDENTIFIER '=' . expr ';'  (13)

	tINTEGER  shift 39
	tDOUBLE  shift 40
	tIDENTIFIER  shift 41
	tSTRING  shift 42
	tNULL  shift 43
	'~'  shift 44
	'+'  shift 45
	'-'  shift 46
	'['  shift 47
	'('  shift 48
	'@'  shift 49
	.  error

	literalString  goto 50
	expr  goto 57
	funcall  goto 52
	leftval  goto 53
	literal  goto 54


state 31
	vardecl : tPUBLIC type tIDENTIFIER ';' .  (10)

	.  reduce 10


state 32
	functions : tPUBLIC type tIDENTIFIER '(' . fundeclargs ')'  (14)
	functions : tPUBLIC type tIDENTIFIER '(' . fundeclargs ')' '=' literal block  (19)
	functions : tPUBLIC type tIDENTIFIER '(' . fundeclargs ')' block  (20)
	fundeclargs : .  (26)

	tTYPEINT  shift 4
	tTYPESTRING  shift 5
	tTYPEDOUBLE  shift 6
	'['  shift 7
	')'  reduce 26

	type  goto 33
	fundeclargs  goto 58
	args  goto 35
	arg  goto 36


state 33
	arg : type . tIDENTIFIER  (29)

	tIDENTIFIER  shift 59
	.  error


state 34
	functions : tPROCEDURE tIDENTIFIER '(' fundeclargs . ')'  (18)
	functions : tPROCEDURE tIDENTIFIER '(' fundeclargs . ')' block  (24)

	')'  shift 60
	.  error


state 35
	fundeclargs : args .  (25)
	args : args . ',' arg  (28)

	','  shift 61
	')'  reduce 25


state 36
	args : arg .  (27)

	.  reduce 27


state 37
	vardecl : tUSE type tIDENTIFIER ';' .  (11)

	.  reduce 11


state 38
	functions : tUSE type tIDENTIFIER '(' . fundeclargs ')'  (16)
	fundeclargs : .  (26)

	tTYPEINT  shift 4
	tTYPESTRING  shift 5
	tTYPEDOUBLE  shift 6
	'['  shift 7
	')'  reduce 26

	type  goto 33
	fundeclargs  goto 62
	args  goto 35
	arg  goto 36


state 39
	literal : tINTEGER .  (34)

	.  reduce 34


state 40
	literal : tDOUBLE .  (35)

	.  reduce 35


state 41
	funcall : tIDENTIFIER . '(' ')'  (88)
	funcall : tIDENTIFIER . '(' funcallargs ')'  (89)
	leftval : tIDENTIFIER .  (93)

	'('  shift 63
	tPRINTLN  reduce 93
	'='  reduce 93
	'|'  reduce 93
	'&'  reduce 93
	tEQ  reduce 93
	tNE  reduce 93
	'>'  reduce 93
	'<'  reduce 93
	tGE  reduce 93
	tLE  reduce 93
	'+'  reduce 93
	'-'  reduce 93
	'*'  reduce 93
	'/'  reduce 93
	'%'  reduce 93
	'['  reduce 93
	';'  reduce 93
	')'  reduce 93
	','  reduce 93
	']'  reduce 93
	'!'  reduce 93
	':'  reduce 93
	'?'  reduce 93


state 42
	literalString : tSTRING .  (38)

	.  reduce 38


state 43
	literal : tNULL .  (37)

	.  reduce 37


state 44
	expr : '~' . expr  (67)

	tINTEGER  shift 39
	tDOUBLE  shift 40
	tIDENTIFIER  shift 41
	tSTRING  shift 42
	tNULL  shift 43
	'~'  shift 44
	'+'  shift 45
	'-'  shift 46
	'['  shift 47
	'('  shift 48
	'@'  shift 49
	.  error

	literalString  goto 50
	expr  goto 64
	funcall  goto 52
	leftval  goto 53
	literal  goto 54


state 45
	expr : '+' . expr  (66)

	tINTEGER  shift 39
	tDOUBLE  shift 40
	tIDENTIFIER  shift 41
	tSTRING  shift 42
	tNULL  shift 43
	'~'  shift 44
	'+'  shift 45
	'-'  shift 46
	'['  shift 47
	'('  shift 48
	'@'  shift 49
	.  error

	literalString  goto 50
	expr  goto 65
	funcall  goto 52
	leftval  goto 53
	literal  goto 54


state 46
	expr : '-' . expr  (65)

	tINTEGER  shift 39
	tDOUBLE  shift 40
	tIDENTIFIER  shift 41
	tSTRING  shift 42
	tNULL  shift 43
	'~'  shift 44
	'+'  shift 45
	'-'  shift 46
	'['  shift 47
	'('  shift 48
	'@'  shift 49
	.  error

	literalString  goto 50
	expr  goto 66
	funcall  goto 52
	leftval  goto 53
	literal  goto 54


state 47
	expr : '[' . expr ']'  (82)

	tINTEGER  shift 39
	tDOUBLE  shift 40
	tIDENTIFIER  shift 41
	tSTRING  shift 42
	tNULL  shift 43
	'~'  shift 44
	'+'  shift 45
	'-'  shift 46
	'['  shift 47
	'('  shift 48
	'@'  shift 49
	.  error

	literalString  goto 50
	expr  goto 67
	funcall  goto 52
	leftval  goto 53
	literal  goto 54


state 48
	expr : '(' . expr ')'  (81)

	tINTEGER  shift 39
	tDOUBLE  shift 40
	tIDENTIFIER  shift 41
	tSTRING  shift 42
	tNULL  shift 43
	'~'  shift 44
	'+'  shift 45
	'-'  shift 46
	'['  shift 47
	'('  shift 48
	'@'  shift 49
	.  error

	literalString  goto 50
	expr  goto 68
	funcall  goto 52
	leftval  goto 53
	literal  goto 54


state 49
	expr : '@' .  (87)

	.  reduce 87


state 50
	literal : literalString .  (36)
	literalString : literalString . tSTRING  (39)

	tSTRING  shift 69
	tPRINTLN  reduce 36
	'|'  reduce 36
	'&'  reduce 36
	tEQ  reduce 36
	tNE  reduce 36
	'>'  reduce 36
	'<'  reduce 36
	tGE  reduce 36
	tLE  reduce 36
	'+'  reduce 36
	'-'  reduce 36
	'*'  reduce 36
	'/'  reduce 36
	'%'  reduce 36
	'['  reduce 36
	';'  reduce 36
	')'  reduce 36
	','  reduce 36
	']'  reduce 36
	'{'  reduce 36
	'!'  reduce 36
	':'  reduce 36


state 51
	vardecl : type tIDENTIFIER '=' expr . ';'  (12)
	expr : expr . '+' expr  (68)
	expr : expr . '-' expr  (69)
	expr : expr . '*' expr  (70)
	expr : expr . '/' expr  (71)
	expr : expr . '%' expr  (72)
	expr : expr . '<' expr  (73)
	expr : expr . '>' expr  (74)
	expr : expr . tGE expr  (75)
	expr : expr . tLE expr  (76)
	expr : expr . tNE expr  (77)
	expr : expr . tEQ expr  (78)
	expr : expr . '&' expr  (79)
	expr : expr . '|' expr  (80)
	leftval : expr . '[' expr ']'  (94)

	'|'  shift 70
	'&'  shift 71
	tEQ  shift 72
	tNE  shift 73
	'>'  shift 74
	'<'  shift 75
	tGE  shift 76
	tLE  shift 77
	'+'  shift 78
	'-'  shift 79
	'*'  shift 80
	'/'  shift 81
	'%'  shift 82
	'['  shift 83
	';'  shift 84
	.  error


state 52
	expr : funcall .  (86)

	.  reduce 86


state 53
	expr : leftval .  (83)
	expr : leftval . '=' expr  (84)
	expr : leftval . '?'  (85)

	'='  shift 85
	'?'  shift 86
	tPRINTLN  reduce 83
	'|'  reduce 83
	'&'  reduce 83
	tEQ  reduce 83
	tNE  reduce 83
	'>'  reduce 83
	'<'  reduce 83
	tGE  reduce 83
	tLE  reduce 83
	'+'  reduce 83
	'-'  reduce 83
	'*'  reduce 83
	'/'  reduce 83
	'%'  reduce 83
	'['  reduce 83
	';'  reduce 83
	')'  reduce 83
	','  reduce 83
	']'  reduce 83
	'!'  reduce 83
	':'  reduce 83


state 54
	expr : literal .  (64)

	.  reduce 64


state 55
	functions : type tIDENTIFIER '(' fundeclargs . ')'  (15)
	functions : type tIDENTIFIER '(' fundeclargs . ')' '=' literal block  (21)
	functions : type tIDENTIFIER '(' fundeclargs . ')' block  (22)

	')'  shift 87
	.  error


state 56
	functions : tPUBLIC tPROCEDURE tIDENTIFIER '(' fundeclargs . ')'  (17)
	functions : tPUBLIC tPROCEDURE tIDENTIFIER '(' fundeclargs . ')' block  (23)

	')'  shift 88
	.  error


state 57
	vardecl : tPUBLIC type tIDENTIFIER '=' expr . ';'  (13)
	expr : expr . '+' expr  (68)
	expr : expr . '-' expr  (69)
	expr : expr . '*' expr  (70)
	expr : expr . '/' expr  (71)
	expr : expr . '%' expr  (72)
	expr : expr . '<' expr  (73)
	expr : expr . '>' expr  (74)
	expr : expr . tGE expr  (75)
	expr : expr . tLE expr  (76)
	expr : expr . tNE expr  (77)
	expr : expr . tEQ expr  (78)
	expr : expr . '&' expr  (79)
	expr : expr . '|' expr  (80)
	leftval : expr . '[' expr ']'  (94)
